metadata/force-app/main/default/objects/CustomName_OjncJ__c/CustomName_OjncJ__c.object-meta.xml
<CustomObject>
    <description>Description_KYkty</description>
    <label>CustomLabel_mPfhG</label>
    <nameField>
        <label>CustomLabel_mPfhG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_mPfhGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>