metadata/force-app/main/default/objects/CustomName_OjncJ__c/fields/CustomField_KchRh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KchRh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldKlSxD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>