metadata/force-app/main/default/objects/CustomName_OjncJ__c/fields/CustomField_zKnUS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zKnUS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTCeNn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>